[tool.poetry]
name = "tronald"
version = "0.3"
description = "CLI for getting Postgres dumps from remote containers."
authors = ["Filip Weidemann <filip.weidemann@outlook.de>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
paramiko = "^2.4"
inquirer = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = { version = "*", allows-prereleases = true }
gitchangelog = "^3.0"
pylint = "^2.3"

[tool.poetry.scripts]
tronald = "tronald.__main__:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
